--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -19,7 +19,19 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".TestActivity"
+        <receiver android:name=".NewAppsAddedOrRemovedReceiver"
+                  android:exported="true"
+                  android:enabled="true">
+            <intent-filter
+                android:priority="999">
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <action android:name="android.intent.action.PACKAGE_REMOVED" />
+                <data android:scheme="package" />
+            </intent-filter>
+
+        </receiver>
+
+        <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:launchMode="singleTop" >
 
